--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/magic_enum
-	previous = 
-	base = 2ec71640ff7c
+	previous = 2ec71640ff7c
+	base = dd78c1121832
 	trim = 
 	trimbase = 
