--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/magic_enum
+	parent = release/rolling/magic_enum/0.9.5-2
 	previous = 2ec71640ff7c
 	base = 1bbf6e0b31ba
 	trim = 
